--- a/public/about.html
+++ b/public/about.html
@@ -64,13 +64,12 @@
     </ul>
   </nav>
 
-  <!-- Load Facebook SDK for JavaScript  -->
   <div id="fb-root"></div>
   <script>(function (d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
       if (d.getElementById(id)) return;
       js = d.createElement(s); js.id = id;
-      js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0";
+      js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0';
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));</script>
 
@@ -126,9 +125,9 @@
             <span class="section-heading-upper">Whatever you think you can do, or dream you can do, begin it. BOLDNESS HAS GENIUS, POWER, AND MAGIC IN IT.</span>
             <span class="section-heading-upper">~Goethe</span>
           </h2>
-          <!-- Your FB like button code -->
-          <div class="fb-like" data-href="https://www.your-domain.com/your-page.html" data-layout="standard" data-action="like" data-show-faces="true">
-          </div>
+          <!-- FB like button code -->
+          <div class="fb-like" data-href="https://guarded-depths-83548.herokuapp.com/about.html" data-layout="standard" data-action="like"
+            data-size="large" data-show-faces="true" data-share="true"></div>
         </div>
       </div>
     </div>
@@ -152,14 +151,14 @@
             <p class="mb-0">Buying and designing our dream home has been an amazing experience and I feel fortunate to have this opportunity.
               I'm eternally grateful to my husband who spoils me everyday.</p>
 
-            <!-- Your FB like button code -->
-            <div class="fb-like" data-href="https://www.your-domain.com/your-page.html" data-layout="standard" data-action="like" data-show-faces="true">
-            </div>
+            <!-- FB like button code -->
+            <div class="fb-like" data-href="https://guarded-depths-83548.herokuapp.com/about.html" data-layout="standard" data-action="like"
+              data-size="large" data-show-faces="true" data-share="true"></div>
 
             <h5 class="card-header">Leave a Comment:</h5>
             <!-- FB Comments Form -->
-            <div class="fb-comments" data-href="https://developers.facebook.com/docs/plugins/comments#configurator" data-numposts="10"></div>
-            
+            <div class="fb-comments" data-href="https://guarded-depths-83548.herokuapp.com/about.html" data-numposts="10"></div>
+
           </div>
         </div>
       </div>
