--- a/public/blog.html
+++ b/public/blog.html
@@ -21,7 +21,6 @@
 </head>
 
 <body>
-
     <body id="page-top">
         <!-- Navigation -->
         <a class="menu-toggle rounded" href="">
@@ -88,7 +87,7 @@
 
                 <!-- Post Content -->
                 <p class="lead text-primary">
-                    I found out this blog online "Creating the Tranquil Bedroom" written by Ashley Perry which happens to feature our master
+                    I found this blog online "Creating the Tranquil Bedroom" written by Ashley Perry which happens to feature our master
                     bedroom when previous owners lived in our home. To learn more follow the link to the article below.
                 </p>
                 <p>A tranquil bedroom. We love the idea of it. We love the promise of it. We love the reality of it. But, really,
@@ -108,13 +107,10 @@
                 <p>So with the idea of a sensory-rich, good-for-you getaway in mind, we break down the top elements that can
                     turn an otherwise chaotic bedroom into a tranquil retreat.
                 </p>
-
                 <div class="card-footer text-muted">
                     by Ashley Perry
                     <a href="http://homeishere.furniturerow.com/creating-tranquil-bedroom" target="_blank">Link to Article</a>
                 </div>
-
-                <h5 class="card-header">Leave a Comment:</h5>
 
             </div>
         </section>
