--- a/public/index.html
+++ b/public/index.html
@@ -134,7 +134,12 @@
   <!-- Architecture, Home Decor and Outdoor Space Section -->
   <section class="content-section rustic">
     <div class="container ">
-      <h2 class="my-4 text-center" style="color: ivory;">Contemporary Mountain House with Rustic Appeal and Modern Aesthetics</h2>
+      <h2 class="my-4 text-center">Contemporary Mountain House with Rustic Appeal and Modern Aesthetics</h2>
+      <p>
+        <strong>This is a blog site about interior design, focusing on Contemporary Rustic Mountain House with a touch eclectic vibe.
+          After putting different styles together, there's a sense of harmony and balance in the midst of imperfections.
+          This is my story based on personal experience after buying, decorating and designing our home.</strong>
+      </p>
       <div class="row ">
         <!--Architecture Icon Section -->
         <div class="col-lg-4 mb-4 p-0">
