--- a/public/interior-sanctuary.html
+++ b/public/interior-sanctuary.html
@@ -156,50 +156,50 @@
       <div class="row no-gutters">
 
         <!-- Portfolio: #1 -->
-        <div class="col-lg-6">
+        <div class="col-lg-10">
           <a class="portfolio-item" href="img/fullsize/3.jpg">
             <img class="img-fluid" src="img/thumbnails/3.jpg" alt="sanctuary rooms">
             <span class="caption">
               <span class="caption-content">
                 <h2>SANCTUARY ROOM</h2>
-                <p class="mb-0">Master Bedroom</p>
+                <p class="mb-0"></p>
               </span>
             </span>
           </a>
         </div>
         <!-- Portfolio: #2   -->
-        <div class="col-lg-6">
+        <div class="col-lg-10">
           <a class="portfolio-item" href="img/fullsize/7.jpg">
-            <img class="img-fluid" src="img/thumbnails/7.jpg" alt="sanctuary rooms">
+            <img class="img-fluid" src="img/thumbnails/7.jpg" alt="rh media system">
             <span class="caption">
               <span class="caption-content">
                 <h2>SANCTUARY ROOM</h2>
-                <p class="mb-0">Master Bath</p>
+                <p class="mb-0"></p>
               </span>
             </span>
           </a>
         </div>
         <!-- Portfolio: #3 -->
-        <div class="col-lg-6">
+        <div class="col-lg-10">
           <a class="portfolio-item" href="img/fullsize/8.jpg">
-            <img class="img-fluid" src="img/thumbnails/8.jpg" alt="sanctuary rooms">
+            <img class="img-fluid" src="img/thumbnails/8.jpg" alt="goethe art">
             <span class="caption">
               <span class="caption-content">
                 <h2>SANCTUARY ROOM</h2>
-                <p class="mb-0">Master Bath</p>
+                <p class="mb-0"></p>
               </span>
             </span>
           </a>
         </div>
 
         <!-- Portfolio: #4 -->
-        <div class="col-lg-6">
+        <div class="col-lg-10">
           <a class="portfolio-item" href="img/fullsize/9.jpg">
-            <img class="img-fluid" src="img/thumbnails/9.jpg" alt="sanctuary rooms">
+            <img class="img-fluid" src="img/thumbnails/9.jpg" alt="yellow vase">
             <span class="caption">
               <span class="caption-content">
                 <h2>SANCTUARY ROOM</h2>
-                <p class="mb-0">Office</p>
+                <p class="mb-0"></p>
               </span>
             </span>
           </a>
