--- a/public/about.html
+++ b/public/about.html
@@ -127,7 +127,7 @@
           </h2>
           <!-- FB like button code -->
           <div class="fb-like" data-href="https://guarded-depths-83548.herokuapp.com/about.html" data-layout="standard" data-action="like"
-            data-size="large" data-show-faces="true" data-share="true"></div>
+            data-size="small" data-show-faces="true" data-share="true"></div>
         </div>
       </div>
     </div>
