--- a/public/interior-whimsy.html
+++ b/public/interior-whimsy.html
@@ -118,12 +118,20 @@
                         <h5 class="card-header text-center">Search</h5>
                         <div class="card-body">
                             <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Search for...">
-                                <span class="input-group-btn">
-                                    <button class="btn btn-secondary" type="button">Go!</button>
-                                </span>
+                                <div id="search">
+                                    <input type="text" placeholder="filter by search" id="filter-search">
+                                    <span class="input-group-btn">
+                                        <button class="btn btn-secondary" type="button">Go!</button>
+                                    </span>
+                                </div>
                             </div>
                         </div>
+                    </div>
+                    <div id="gallery">
+                        <img src="img/fullsize/14.jpg" , data-tags="Decor, Interior" alt="Red Door" />
+                        <img src="img/fullsize/15.jpg" , data-tags="Decor, Interior" alt="Terracota Vase">
+                        <img src="img/fullsize/16.jpg" , data-tags="Decor, Interior" alt="Banana Plant">
+                        <img src="img/fullsize/17.jpg" , data-tags="Decor, Interior" alt="Artificial Banana Plant">
                     </div>
 
                     <!-- Favorite Decor and Furnishings Link -->
@@ -230,11 +238,11 @@
                             </h2>
 
                             <!-- FB like -->
-                            <div class="fb-like" data-href="https://guarded-depths-83548.herokuapp.com/interior-whimsy.html" data-layout="standard"
-                                data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
+                            <div class="fb-like" data-href="https://guarded-depths-83548.herokuapp.com/interior-whimsy.html" data-layout="standard" data-action="like"
+                                data-size="large" data-show-faces="true" data-share="true"></div>
 
-                                <!-- FB comments -->
-                                <div class="fb-comments" data-href="https://guarded-depths-83548.herokuapp.com/interior-whimsy.html" data-numposts="10"></div>
+                            <!-- FB comments -->
+                            <div class="fb-comments" data-href="https://guarded-depths-83548.herokuapp.com/interior-whimsy.html" data-numposts="10"></div>
                         </div>
                     </div>
                 </div>
@@ -255,7 +263,7 @@
                     <!-- Portfolio: #1 -->
                     <div class="col-lg-6">
                         <a class="portfolio-item" href="img/fullsize/14.jpg">
-                            <img class="img-fluid" src="img/thumbnails/14.jpg" alt="">
+                            <img class="img-fluid" src="img/thumbnails/14.jpg" alt="Red Door">
                             <span class="caption">
                                 <span class="caption-content">
                                     <h2>Whimsy Design</h2>
@@ -267,7 +275,7 @@
                     <!-- Portfolio: #2 -->
                     <div class="col-lg-6">
                         <a class="portfolio-item" href="img/fullsize/15.jpg">
-                            <img class="img-fluid" src="img/thumbnails/15.jpg" alt="">
+                            <img class="img-fluid" src="img/thumbnails/15.jpg" alt="Terracota Vase">
                             <span class="caption">
                                 <span class="caption-content">
                                     <h2>Whimsy Design</h2>
@@ -279,7 +287,7 @@
                     <!-- Portfolio: #3  -->
                     <div class="col-lg-6">
                         <a class="portfolio-item" href="img/fullsize/16.jpg">
-                            <img class="img-fluid" src="img/thumbnails/16.jpg" alt="">
+                            <img class="img-fluid" src="img/thumbnails/16.jpg" alt="Banana Plant">
                             <span class="caption">
                                 <span class="caption-content">
                                     <h2>Whimsy Design</h2>
@@ -291,7 +299,7 @@
                     <!-- Portfolio: #4  -->
                     <div class="col-lg-6">
                         <a class="portfolio-item" href="img/fullsize/17.jpg">
-                            <img class="img-fluid" src="img/thumbnails/17.jpg" alt="">
+                            <img class="img-fluid" src="img/thumbnails/17.jpg" alt="Artificial Banana Plant">
                             <span class="caption">
                                 <span class="caption-content">
                                     <h2>Whimsy Design</h2>
@@ -308,8 +316,9 @@
     <!-- Blog Section -->
     <section class="content-section bg-primary text-primary text-center" id="whimsy-blog-img">
         <div class="row">
-            <div class="col-lg-10">
-                <img class="img-fluid rounded " src="" alt="">
+            <div class="col-lg-6">
+                <img class="img-fluid rounded " src="https://user-images.githubusercontent.com/35505038/42584704-0fc4a3f0-84f1-11e8-8287-8b268eba3ec3.jpg"
+                    alt="White Vase">
             </div>
             <div class="col-lg-6 text-center">
                 <div class="content-section-heading">
@@ -361,6 +370,43 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/stylish-portfolio.min.js"></script>
+    <!-- Custom Script -->
+    <script src="js/view.js" type="text/javascript"></script>
+
+    <!-- Javascript search from Javascript & Jquery Jon Duckett -->
+    <script>
+        (function () {
+            var $imgs = $('#gallery img');
+            var $search = $('#filter-search');
+            var cache = [];
+
+            $imgs.each(function () {
+                cache.push({
+                    element: this,
+                    text: this.alt.trim().toLowerCase()
+                });
+            });
+
+            function filter() {
+                var query = this.value.trim().toLowerCase();
+
+                cache.forEach(function (img) {
+                    var index = 0;
+                    if (query) {
+                        index = img.text.indexOf(query);
+                    }
+
+                    img.element.style.display = index === -1 ? 'none' : '';
+                });
+            }
+
+            if ('oninput' in $search[0]) {
+                $search.on('input', filter);
+            } else {
+                $search.on('keyup', filter);
+            }
+        }());
+    </script>
 
 </body>
 
