--- a/public/index.html
+++ b/public/index.html
@@ -136,9 +136,10 @@
     <div class="container ">
       <h2 class="my-4 text-center">Contemporary Mountain House with Rustic Appeal and Modern Aesthetics</h2>
       <p>
-        <strong>This is a blog site about interior design, focusing on Contemporary Rustic Mountain House with a touch eclectic vibe.
-          After putting different styles together, there's a sense of harmony and balance in the midst of imperfections.
-          This is my story based on personal experience after buying, decorating and designing our home.</strong>
+        <strong>This is a blog site about interior design, focusing on
+          <em>Contemporary Rustic Mountain House</em> with a touch of eclectic vibe. After putting different styles together
+          in our home, there's a sense of harmony and balance in the midst of imperfections. This is my story based on personal
+          experience after buying, decorating and designing our home. I hope you enjoy the journey as much as I did!</strong>
       </p>
       <div class="row ">
         <!--Architecture Icon Section -->
